# planar_robot_pkgs

./: CMakeLists.txt  package.xml
MATLAB/210204_CTC_contineous_cont_sampling_time_test/: Des_X_1.txt  Des_X_2.txt  Des_X_5.txt  Des_X_5_gain.txt  Foot_Pos_1.txt  Foot_Pos_2.txt  Foot_Pos_5.txt  Foot_Pos_5_gain.txt  sampling_time_test.m  torque_1.txt  torque_2.txt  torque_5.txt  torque_5_gain.txt  torque_CTC_1.txt  torque_CTC_2.txt  torque_CTC_5.txt  torque_CTC_5_gain.txt
MATLAB/210208_CTC_contineous_cont_sampling_time_test/: Des_X_1.txt  Des_X_2.txt  Foot_Pos_1.txt  Foot_Pos_2.txt  Foot_Pos_dot_1.txt  Foot_Pos_dot_2.txt  sampling_time_test.m  torque_1.txt  torque_2.txt  torque_CTC_1.txt  torque_CTC_2.txt
MATLAB/210208_CTC_contineous_cont_sampling_time_test2/: Des_X.txt  Des_X5.txt  Des_X5_.txt  Des_X_.txt  Foot_Pos.txt  Foot_Pos5.txt  Foot_Pos5_.txt  Foot_Pos_.txt  Foot_Pos_dot.txt  Foot_Pos_dot5.txt  Foot_Pos_dot5_.txt  Foot_Pos_dot_.txt  sampling_time_test.m  torque.txt  torque5.txt  torque_CTC.txt  torque_CTC5.txt  torque_CTC5_.txt  torque_CTC_.txt
MATLAB/210208_CTC_contineous_cont_sampling_time_test3/: Des_X2.txt  Des_X2_.txt  Des_X5.txt  Des_X5_.txt  Foot_Pos2.txt  Foot_Pos2_.txt  Foot_Pos5.txt  Foot_Pos5_.txt  Foot_Pos_dot2.txt  Foot_Pos_dot2_.txt  Foot_Pos_dot5.txt  Foot_Pos_dot5_.txt  NE_Tau2_.txt  NE_Tau5_.txt  X_CTC2_.txt  X_CTC5_.txt  q_CTC2_.txt  q_CTC5_.txt  sampling_time_test.m  tmpdata0.txt  tmpdata1.txt  (+24 more)
launch/: planar_robot.launch
msg/: Planar_CTCMsg.msg  Pub_torque_calc_Msg.msg  Pub_torque_calc_Msg2.msg
src/: plugin.cc  torque_calc.cc
worlds/: planar_robot.world
(+31 files in other folders)
